--- a/file-share-backend/vercel.json
+++ b/file-share-backend/vercel.json
@@ -14,5 +14,11 @@
       "src": "/(.*)",
       "dest": "server.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cleanup",
+      "schedule": "*/5 * * * *"
+    }
   ]
 }
